# rules_applecross

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: build.yml
examples/ios/DynamicFramework/: BUILD
examples/ios/DynamicFramework/Sources/: Greeter.h  Greeter.m
examples/ios/HelloWorldObjC/: BUILD
examples/ios/HelloWorldObjC/Sources/: AppDelegate.m  main.m
examples/ios/HelloWorldSwift/: BUILD
examples/ios/HelloWorldSwiftUI/: BUILD
examples/ios/HelloWorldSwiftUI/Sources/: HelloWorldSwiftUIApp.swift
examples/ios/HelloWorldSwiftUI/Tests/: HelloWorldSwiftUITests.swift
examples/ios/HelloWorldSwiftUI/UITests/: HelloWorldSwiftUIUITests.swift
examples/ios/StaticFramework/: BUILD
examples/ios/StaticFramework/Sources/: MyFramework.h  MyFramework.m
examples/macos/CommandLine/: BUILD  Info.plist
examples/macos/CommandLine/Sources/: main.m
examples/macos/CommandLineSwift/: BUILD
examples/macos/CommandLineSwift/Sources/: main.swift
examples/macos/HelloWorld/: BUILD  Info.plist
examples/macos/HelloWorld/Sources/: AppDelegate.m
examples/macos/HelloWorldSwift/: BUILD
examples/swift_hello/: BUILD  main.swift
examples/tvos/HelloWorld/: BUILD
examples/visionos/HelloWorld/: BUILD  Info.plist
examples/visionos/HelloWorld/Sources/: App.swift
examples/watchos/HelloWorld/: BUILD
patches/: rules_apple_bazel9_compat.patch  rules_apple_bundletool_path.patch  rules_apple_create_simulator_action.patch  rules_apple_linkstamps_compat.patch  rules_apple_no_absolute_tool_paths.patch  rules_apple_no_exec_platform_constraint.patch  rules_cc_apple_force_load.patch  rules_swift_empty_target_system_name.patch
testing/: BUILD  empty_toolchain.bzl
tests/data/: BUILD  hello.c  hello.swift  hello_foundation.swift
toolchain/: BUILD.template.bzl  BUILD.tpl  apple_cross_toolchain.bzl  bazel_substitutions.cc.tpl  cc_toolchain_config.bzl.tpl  cc_toolchain_config.template.bzl  cc_wrapper.template.sh  extensions.bzl  libtool.cc  libtool.sh  llvm_prebuilt.bzl  objc_link_config.bzl  repositories.bzl  repositories.bzl.tpl  swift_autoconfiguration.bzl.tpl  swift_autoconfiguration.template.bzl  swift_runner.cc.tpl  swift_toolchain.bzl  swift_toolchain.bzl.tpl  swift_toolchain.template.bzl  toolchains.template.bzl  wrapped_clang.cc.tpl  xcrunwrapper.sh.tpl  xcrunwrapper.template.sh
tools/: install-mandatory-tools.sh  package-sdks.sh  set-developer-dir.sh
xcode_config/: BUILD
