module(name = "rules_applecross", version = "0.0.3")

bazel_dep(name = "apple_support", version = "2.3.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_apple", version = "4.3.3", repo_name = "build_bazel_rules_apple")
git_override(
    module_name = "rules_apple",
    remote = "https://github.com/bazelbuild/rules_apple.git",
    commit = "d930c4c6eaeed91c8275604a428407d123a85216",
    patches = ["//patches:rules_apple_no_exec_platform_constraint.patch"],
    patch_strip = 1,
)
bazel_dep(name = "rules_swift", version = "3.4.2", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "llvm", version = "0.6.1", dev_dependency = True)
bazel_dep(name = "platforms", version = "1.0.0")

register_toolchains("@llvm//toolchain:linux_x86_64_to_linux_x86_64")

apple_cross_toolchain = use_extension(
    "//toolchain:extensions.bzl",
    "apple_cross_toolchain",
)
apple_cross_toolchain.configure(
    name = "apple_cross_toolchain",
    apple_sdk_urls = ["SDKS_URL"],
    apple_sdk_sha256 = "22f572b8e2110b076be3623bac9de2a9892b98b2914922f9ae74657afece8b17",
    apple_sdk_archive_type = "tar.xz",
)
use_repo(apple_cross_toolchain, "apple_cross_toolchain")

register_toolchains("@apple_cross_toolchain//:cc-toolchain-darwin_x86_64")
register_toolchains("@apple_cross_toolchain//:cc-toolchain-darwin_arm64")
register_toolchains("@apple_cross_toolchain//:cc-toolchain-darwin_arm64e")
register_toolchains("@apple_cross_toolchain//:cc-toolchain-ios_arm64")
register_toolchains("@apple_cross_toolchain//:cc-toolchain-ios_arm64e")
register_toolchains("@apple_cross_toolchain//:cc-toolchain-ios_x86_64")
register_toolchains("@apple_cross_toolchain//:cc-toolchain-tvos_arm64")
register_toolchains("@apple_cross_toolchain//:cc-toolchain-tvos_x86_64")
register_toolchains("@apple_cross_toolchain//:cc-toolchain-watchos_arm64_32")
register_toolchains("@apple_cross_toolchain//:cc-toolchain-watchos_armv7k")
register_toolchains("@apple_cross_toolchain//:cc-toolchain-watchos_x86_64")

register_toolchains("@apple_cross_toolchain//:swift-toolchain-darwin_x86_64")
register_toolchains("@apple_cross_toolchain//:swift-toolchain-darwin_arm64")
register_toolchains("@apple_cross_toolchain//:swift-toolchain-darwin_arm64e")
register_toolchains("@apple_cross_toolchain//:swift-toolchain-ios_arm64")
register_toolchains("@apple_cross_toolchain//:swift-toolchain-ios_arm64e")
register_toolchains("@apple_cross_toolchain//:swift-toolchain-ios_x86_64")
register_toolchains("@apple_cross_toolchain//:swift-toolchain-tvos_arm64")
register_toolchains("@apple_cross_toolchain//:swift-toolchain-tvos_x86_64")
register_toolchains("@apple_cross_toolchain//:swift-toolchain-watchos_arm64_32")
register_toolchains("@apple_cross_toolchain//:swift-toolchain-watchos_armv7k")
register_toolchains("@apple_cross_toolchain//:swift-toolchain-watchos_x86_64")
